tests/fail/parser-import6.dit
import Test from "https://github.com/isaiahshiner/dits/blob/master/dits/Number.dit";

A {}